<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical" 
	    android:paddingLeft="10dp"
	    android:paddingRight="10dp"
	    >
	    
	    <LinearLayout 
	        android:orientation="horizontal"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="5dp">
	        
	        <ImageView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:src="@drawable/avatar"
	            />
	        
	        <LinearLayout 
	            android:orientation="vertical"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dp"
	            >
	       
	        </LinearLayout>
	    </LinearLayout>
	    
	    <TableLayout
	        android:layout_width="match_parent"
    		android:layout_height="wrap_content"
    		android:stretchColumns="1"
    		android:layout_marginTop="15dp">

	        <TextView 
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/lbEdit_Profile"
	            android:textStyle="normal"
	            />
	        <View
        		android:layout_height="2dip"
        		android:background="#ffffff"
        		android:layout_marginBottom="10dp" />
    		<TableRow>       
        		<TextView 
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/tv_edit_Name"
		            android:textSize="12dp"
		            android:layout_marginBottom="10dp"
		            android:textColor="#ffffff"
		            android:layout_marginRight="10dp"
		            android:textStyle="normal"
		            />

		        <EditText
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_marginBottom="10dp"
		            android:ems="10"
		            android:gravity="right"
		            android:height="40dp"
		            android:paddingLeft="10dp"
		            android:textColor="#ffffff"
		            android:textSize="15dp" >

		            <requestFocus />
		        </EditText>
    		</TableRow>
    		<TableRow >
        
        		<TextView 
	            	android:layout_width="wrap_content"
	            	android:layout_height="wrap_content"
	            	android:text="@string/tv_edit_DayOfBirth"
	            	android:textSize="12dp"
	            	android:layout_marginBottom="10dp"
	            	android:textColor="#ffffff"
	            />
		    	<EditText 
			   	    android:layout_width="match_parent"
			   	    android:layout_height="wrap_content"
			   	    android:height="40dp"			   	    
			   	    android:layout_marginBottom="10dp"
			   	    android:textSize="15dp"
			   	    android:textColor="#ffffff"
			   	    android:gravity="center|left"
			   	    android:paddingLeft="10dp"
			   	    />
    		</TableRow>
    		
	        <TableRow >
	        
	            <TextView 
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/tv_edit_Phone"
		            android:textSize="12dp"
		            android:layout_marginBottom="10dp"
		            android:textColor="#ffffff"
		            
		            />
	            <EditText 
			   	    android:width="214dp"
			   	    android:layout_width="wrap_content"
			   	    android:layout_height="wrap_content"
			   	    android:height="40dp"
			   	    android:layout_marginBottom="5dp"
			   	    android:textSize="15dp"
			   	    android:textColor="#ffffff"
			   	    android:paddingLeft="10dp" />
		   	
		   	
	        </TableRow>
	        
		</TableLayout>	
		
		<LinearLayout 
	        android:orientation="horizontal"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:gravity="center"
	        >
	        <Button 
	            android:id="@+id/btLogin"
	            android:layout_width="155dp"
	            android:layout_height="35dp"
	            android:textSize="12dp"
	            android:text="@string/btDone"
	            />
	        <Button 
	            android:id="@+id/btCancel"
	            android:layout_width="155dp"
	            android:layout_height="35dp"
	            android:textSize="12dp"
	            android:text="@string/btCancel"
	            android:onClick="CancelClicked"
	            />
	    </LinearLayout>
	    
	</LinearLayout>
</ScrollView>