<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#CC0033">
    
	<LinearLayout 
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:gravity="center"
	    android:orientation="vertical"
	    android:paddingLeft="16dp"
	    android:paddingRight="16dp"
	    >
	    
	    <ImageView 
	        android:id="@+id/ivLogo"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	         android:src="@drawable/main_logo"
	         android:layout_marginBottom="10dp"
	        />
	    
	   	<EditText 
	   	    android:id="@+id/esn_login_Email"
	   	    android:layout_width="fill_parent"
	   	    android:layout_height="wrap_content"
	   	    android:background="@drawable/rounded_corner_white"
	   	    android:hint="@string/txtEmail"
	   	    android:textColor="#FF0000"
	   	    android:textSize="16dp"
	   	    android:paddingLeft="5dp"
	   	    android:textColorHint="#FF0000"
	   	    android:paddingRight="5dp"
	   	    android:layout_marginBottom="4dp"
	   	    android:layout_marginTop="4dp"
	   	    android:layout_marginLeft="3dp"
	   	    android:layout_marginRight="3dp"
	   	    android:paddingTop="8dp"
	   	    android:paddingBottom="8dp"
	   	    />
	   	
	   	<EditText 	   	    
	   	    android:id="@+id/esn_login_pass"
	   	    android:layout_width="fill_parent"
	   	    android:layout_height="wrap_content"
	   	    android:background="@drawable/rounded_corner_white"
	   	    android:layout_marginBottom="4dp"
	   	    android:layout_marginTop="4dp"
	   	    android:hint="@string/txtPassword"
	   	    android:textColor="#FF0000"
	   	    android:textColorHint="#FF0000"
	   	    android:paddingLeft="5dp"
	   	    android:textSize="16dp"
	   	    android:paddingRight="5dp"
	   	    android:inputType="textPassword"
	   	    android:paddingTop="8dp"
	   	    android:paddingBottom="8dp"
	   	    android:layout_marginLeft="3dp"
	   	    android:layout_marginRight="3dp"
	   	    />
	      	  
	   	<Button 
            android:id="@+id/btLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btLogin"
            android:onClick="LoginClicked"
            android:focusable="true"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            />	        
	   <Button 
            android:id="@+id/btBack"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btBack"
            android:onClick="BackClicked"
            android:focusable="true"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            />	   
	    <TextView 
	        android:id="@+id/tvForgotPassgord"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="Forgot your password?"
	        android:textSize="10dp"
	        android:textStyle="bold"
	        android:textColor="#FFF"
	        />
	</LinearLayout>
</LinearLayout>